tests/specs/ecosystem/darwish/utils/0_1_2.test
darwish/utils/0.1.2
-- deno.lock --
{
  "version": "3",
  "remote": {}
}

===

== FAST CHECK EMIT PASSED ==

== TYPE CHECK FAILED ==
-- stdout --

-- stderr --
TS2305 [ERROR]: Module '"file://<tmpdir>/add/index.ts"' has no exported member 'default'.
export { default as add } from "./add/index.ts";
         ~~~~~~~
    at file://<tmpdir>/mod.ts:1:10

error: Type checking failed.

